Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 </li>
 <li>Then call css class in your design: <code>&lt;div class="bg-17 txt-1"&gt;Hello Rainbow :)&lt;/div&gt;</code>
 </li>
+<li>Open <code>documentation/index.html</code> file to view color list.</li>
 </ol>
 
       <footer class="site-footer">
