Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -40,6 +40,11 @@
 <li>Open <code>documentation/index.html</code> file to view color list.</li>
 </ol>
 
+<h3>
+<a id="tutorial" class="anchor" href="#tutorial" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Tutorial</h3>
+
+<p>Open <code>documentation/index.html</code> file after download.</p>
+
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/master-of-the-web/Rainbow">Rainbow</a> is maintained by <a href="https://github.com/master-of-the-web">master-of-the-web</a>.</span>
 
