Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -37,11 +37,10 @@
 </li>
 <li>Then call css class in your design: <code>&lt;div class="bg-17 txt-1"&gt;Hello Rainbow :)&lt;/div&gt;</code>
 </li>
-<li>Open <code>documentation/index.html</code> file to view color list.</li>
 </ol>
 
 <h3>
-<a id="tutorial" class="anchor" href="#tutorial" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Tutorial</h3>
+<a id="tutorial" class="anchor" href="#tutorial" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>TUTORIAL</h3>
 
 <p>Open <code>documentation/index.html</code> file after download.</p>
 
